maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: not found: value getPosition
if(getPosition()==(0,0)){
   ^